# Chronos

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile
Examples/: CMakeLists.txt
Examples/Game/: CMakeLists.txt
Examples/Game/ECSTests/: CMakeLists.txt  main.cpp
Examples/Render/APITesting/: CMakeLists.txt  main.cpp
Examples/Utilities/: CMakeLists.txt
Examples/Utilities/LogTest/: CMakeLists.txt  main.c
Include/Components/: MeshComponent.h  TransformComponent.h  TransformSystem.h  VoxelComponent.h
Include/Game/: Component.h  ComponentArray.h  ComponentManager.h  EntityManager.h  SerializeTypes.h  System.h  SystemManager.h  Types.h  World.h
Include/Render/: IndexBuffer.h  RenderDevice.h  VertexBuffer.h
Include/Render/OpenGL/: RenderDevice_OpenGL.h  VertexBuffer_OpenGL.h
Include/Utilities/: Log.h
Resources/Materials/: Default.material
Resources/Shaders/Default/: Default.shader  Default.txt  opengl.json  shader.opengl.json  vulkan.json
Source/: CMakeLists.txt
Source/Components/: InputComponent.h  MeshComponent.h  TransformComponent.h  VoxelComponent.h
Source/Game/: CMakeLists.txt  Component.h  ComponentArray.h  ComponentManager.h  EntityManager.h  SerializeTypes.h  System.h  SystemManager.h  Types.h  World.h
Source/Render/: Buffers.cpp  Buffers.h  CMakeLists.txt  Descriptors.cpp  Descriptors.h  IndexBuffer.h  Material.h  Pipeline.h  RenderDevice.cpp  RenderDevice.h  Shader.cpp  Shader.h  Texture.h  Vertex.h  VertexBuffer.cpp  VertexBuffer.h
Source/Render/OpenGL/: OpenGL_Buffers.cpp  OpenGL_Buffers.h  OpenGL_Descriptors.cpp  OpenGL_Descriptors.h  OpenGL_Material.cpp  OpenGL_Material.h  OpenGL_Pipeline.cpp  OpenGL_Pipeline.h  OpenGL_RenderDevice.cpp  OpenGL_RenderDevice.h  OpenGL_Shader.cpp  OpenGL_Shader.h  RenderDevice_OpenGL.cpp  RenderDevice_OpenGL.h  VertexBuffer_OpenGL.cpp  VertexBuffer_OpenGL.h
Source/Render/Vulkan/: Vulkan_Buffers.cpp  Vulkan_Buffers.h  Vulkan_Pipeline.cpp  Vulkan_Pipeline.h  Vulkan_RenderDevice.cpp  Vulkan_RenderDevice.h  Vulkan_Shader.cpp  Vulkan_Shader.h  Vulkan_Vertex.cpp  Vulkan_Vertex.h
Source/Systems/: InputSystem.h
Source/Utilities/: CMakeLists.txt  File.h  Log.cpp  Log.h  Path.h
